@@ -41,6 +41,7 @@ struct SPVM_package {
   SPVM_HASH* string_symtable;
   SPVM_CONSTANT_POOL* constant_pool;
   SPVM_HASH* constant_pool_32bit_value_symtable;
+  SPVM_HASH* constant_pool_32bit2_value_symtable;
   SPVM_HASH* constant_pool_64bit_value_symtable;
   int32_t constant_pool_base;
   int32_t no_dup_field_access_field_ids_constant_pool_id;
