@@ -98,12 +98,16 @@ void* SPVM_LIST_shift(SPVM_LIST* array) {
   
   assert(array->length >= 0);
   
-  void* return_value = *(void**)&array->values[0];
-  for (int32_t i = 0; i < array->length - 1; i++) {
-    *(void**)&array->values[i] = *(void**)&array->values[i + 1];
+  if (array->length == 0) {
+    return NULL;
   }
+  else {
+    void* return_value = array->values[0];
+    for (int32_t i = 0; i < array->length - 1; i++) {
+      array->values[i] = array->values[i + 1];
+    }
 
-  array->length--;
-  
-  return return_value;
+    array->length--;
+    return return_value;
+  }
 }
